--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -16,8 +16,9 @@
     "@react-navigation/native": "^6.1.6",
     "app": "0.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "burnt": "^0.11.0",
+    "burnt": "^0.12.1",
     "expo": "^49.0.0",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
