--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -6,24 +6,29 @@
   "scripts": {
     "start": "npx expo start -c",
     "android": "npx expo run:android",
+    "pod-install": "npx pod-install",
     "ios": "npx expo run:ios",
     "eject": "npx expo eject"
   },
   "dependencies": {
     "@babel/runtime": "^7.18.9",
+    "@clerk/clerk-expo": "^0.19.21",
     "@expo/config-plugins": "~7.2.2",
     "@my/ui": "0.0.1",
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-navigation/native": "^6.1.6",
     "app": "0.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "burnt": "^0.12.1",
     "expo": "^49.0.0",
+    "expo-auth-session": "~5.0.2",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-random": "~13.2.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -41,8 +46,10 @@
     "@babel/core": "^7.17.9",
     "@expo/metro-config": "~0.10.0",
     "@tamagui/babel-plugin": "latest",
+    "@types/react-native-dotenv": "^0.2.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-minify-terser": "^0.74.1",
+    "react-native-dotenv": "^3.4.9",
     "typescript": "^4.9.4"
   },
   "resolutions": {
