--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "cd ../.. && yarn build && cd apps/next && next build",
+    "dev": "TAMAGUI_TARGET=web && yarn with-env next dev",
+    "build": "TAMAGUI_TARGET=web && yarn with-env next build",
+    "with-env": "dotenv -e ../../.env.local --",
+    "clean": "rm -rf .next .turbo node_modules .tamagui",
     "start": "next start",
     "serve": "NODE_ENV=production next start --port 8151",
     "lint": "next lint"
@@ -13,6 +15,7 @@
     "@tamagui/config": "latest",
     "@tamagui/next-theme": "latest",
     "app": "0.0.0",
+    "dotenv-cli": "^7.3.0",
     "next": "^13.5.2",
     "raf": "^3.4.1",
     "react": "^18.2.0",
