feat: initial prisma/trpc integration

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "web:extract": "DISABLE_EXTRACTION=false yarn workspace next-app dev",
     "web:prod": "yarn workspace next-app build",
     "web:prod:serve": "yarn workspace next-app serve",
+    "db-push": "turbo db-push",
+    "generate": "cd packages/db && yarn prisma generate",
+    "prisma:studio": "cd packages/db && yarn prisma:studio",
     "fix": "manypkg fix",
     "postinstall": "yarn check-deps --fix && yarn build",
     "build": "yarn workspaces foreach --all --exclude next-app run build",
