--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,9 @@
     "@tamagui/lucide-icons": "latest",
     "@tamagui/shorthands": "latest",
     "@tamagui/themes": "latest",
+    "@tanstack/react-query": "^4.35.3",
+    "@trpc/next": "^10.44.1",
+    "@trpc/react-query": "^10.44.1",
     "burnt": "^0.12.1",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
