--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
     "NODE_ENV", 
     "EAS_BUILD_PLATFORM", 
     "CLERK_SECRET_KEY",
+    "DATABASE_URL",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
     "NEXT_PUBLIC_CLERK_SIGN_IN_URL",
     "NEXT_PUBLIC_CLERK_SIGN_UP_URL",
@@ -16,6 +17,7 @@
       "env": [
         "DISABLE_EXTRACTION",
         "NODE_ENV", 
+        "DATABASE_URL",
         "EAS_BUILD_PLATFORM", 
         "CLERK_SECRET_KEY",
         "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY",
