--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "web:prod": "yarn workspace next-app build",
     "web:prod:serve": "yarn workspace next-app serve",
     "db-push": "turbo db-push",
+    "postinstall": "yarn build:ui && yarn generate",
+    "build:ui": "cd packages/ui && yarn build",
     "generate": "cd packages/db && yarn prisma generate",
     "prisma:studio": "cd packages/db && yarn prisma:studio",
     "fix": "manypkg fix",
-    "postinstall": "yarn check-deps --fix && yarn build",
-    "build": "yarn workspaces foreach --all --exclude next-app run build",
+    "build": "turbo build",
     "upgrade:tamagui": "yarn up '*tamagui*'@latest '@tamagui/*'@latest",
     "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary",
     "check-deps": "check-dependency-version-consistency ."
@@ -38,7 +39,7 @@
     "check-dependency-version-consistency": "^3.0.3",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
-    "eslint": "^8.21.0",
+    "eslint": "^8.28.0",
     "node-gyp": "^9.3.1",
     "prettier": "^2.7.1",
     "turbo": "^1.10.3",
