--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,7 @@
   "types": "./index.ts",
   "license": "MIT",
   "dependencies": {
-    "@clerk/nextjs": "^4.6.15",
+    "@clerk/nextjs": "^4.27.2",
     "@my/db": "*",
     "@trpc/client": "10.9.0",
     "@trpc/server": "10.9.0",
@@ -14,6 +14,6 @@
   },
   "devDependencies": {
     "eslint": "^8.28.0",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.4"
   }
 }
