--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,8 +23,8 @@
     "@prisma/client": "latest"
   },
   "devDependencies": {
-    "dotenv-cli": "^6.0.0",
+    "dotenv-cli": "^7.3.0",
     "prisma": "latest",
-    "typescript": "4.9.4"
+    "typescript": "^4.9.4"
   }
 }
