feat: integration of packs trpc

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,12 @@
   "globalEnv": [
     "DISABLE_EXTRACTION", 
     "NODE_ENV", 
+    "REGION",
+    "AWS_ACCESS_KEY_ID",
+    "AWS_SECRET_ACCESS_KEY",
+    "UPSTASH_REDIS_REST_TOKEN",
+    "UPSTASH_REDIS_REST_URL",
+    "BUCKET_NAME",
     "EAS_BUILD_PLATFORM", 
     "CLERK_SECRET_KEY",
     "DATABASE_URL",
@@ -17,6 +23,12 @@
       "env": [
         "DISABLE_EXTRACTION",
         "NODE_ENV", 
+        "REGION",
+        "AWS_ACCESS_KEY_ID",
+        "AWS_SECRET_ACCESS_KEY",
+        "UPSTASH_REDIS_REST_TOKEN",
+        "UPSTASH_REDIS_REST_URL",
+        "BUCKET_NAME",
         "DATABASE_URL",
         "EAS_BUILD_PLATFORM", 
         "CLERK_SECRET_KEY",
