--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,10 +5,13 @@
   "types": "./index.ts",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.473.0",
     "@clerk/nextjs": "^4.27.2",
     "@my/db": "*",
     "@trpc/client": "10.9.0",
     "@trpc/server": "10.9.0",
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.25.2",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
