--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint": "^8.28.0",
     "node-gyp": "^9.3.1",
     "prettier": "^2.7.1",
-    "turbo": "^1.10.3",
+    "turbo": "latest",
     "typescript": "^4.9.4"
   },
   "packageManager": "yarn@3.6.3"
