--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -5,7 +5,7 @@
     "scheme": "share-your-backpack",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/travel-bag.png",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
@@ -24,7 +24,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/travel-bag.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.shareyourbackpack.app"
