--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -2,8 +2,10 @@
   "build": {
     "development": {
       "distribution": "internal",
+      "developmentClient": true,
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleDebug"
       },
       "ios": {
         "simulator": true,
@@ -12,8 +14,10 @@
     },
     "production": {
       "distribution": "store",
+      "developmentClient": false,
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleDebug"
       }
     }
   }
