--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vercel:install": "yarn install",
     "build": "turbo build",
     "native": "cd apps/expo && yarn start",
+    "release:android": "cd apps/expo && yarn release:android",
+    "adb": "cd apps/expo && yarn adb",
     "watch": "yarn workspaces foreach -pi run watch",
     "web": "yarn build && cd apps/next && yarn dev",
     "web:extract": "DISABLE_EXTRACTION=false yarn workspace next-app dev",
