--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
