feat: refactoring of Prisma schema, breaking change

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -12,8 +12,8 @@
     "build": "tsc",
     "prisma:generate": "yarn with-env prisma generate",
     "prisma:studio": "yarn with-env prisma studio",
-    "prisma:migrate": "yarn with-env prisma migrate",
-    "prisma:migrate:dev": "yarn with-env prisma migrate dev",
+    "prisma:push": "yarn with-env prisma db push",
+    "pscale:dump": "yarn with-env pscale database dump share-your-backpack-db main",
     "clean": "rm -rf .turbo node_modules",
     "with-env": "dotenv -e ../../.env.local --",
     "dev": "yarn with-env prisma studio --port 5556 --browser=none",
