--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -3,7 +3,7 @@
     "name": "share-your-backpack",
     "slug": "share-your-backpack",
     "scheme": "share-your-backpack",
-    "version": "1.0.0",
+    "version": "0.7.0",
     "orientation": "portrait",
     "icon": "./assets/travel-bag.png",
     "userInterfaceStyle": "automatic",
@@ -15,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.shareyourbackpack.app"
@@ -32,10 +30,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-build-properties"
-    ],
+    "plugins": ["expo-router", "expo-build-properties"],
     "extra": {
       "router": {
         "origin": false
