feat: ux refactoring

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "web:prod:serve": "yarn workspace next-app serve",
     "db-push": "turbo db-push",
     "postinstall": "yarn build:ui && yarn generate",
+    "localdb:start": "mysql.server start",
+    "localdb:stop": "mysql.server stop",
+    "localdb:root": "mysql -u root -p",
     "build:ui": "cd packages/ui && yarn build",
     "generate": "cd packages/db && yarn prisma generate",
     "prisma:studio": "cd packages/db && yarn prisma:studio",
