--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-table": "^8.11.2",
     "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.44.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "burnt": "^0.12.1",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
