--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
     "burnt": "^0.12.1",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "solito": "^3.0.0"
   },
