feat: addition of persistent storage on mobile

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,7 +14,9 @@
     "@tamagui/lucide-icons": "latest",
     "@tamagui/shorthands": "latest",
     "@tamagui/themes": "latest",
+    "@tanstack/query-async-storage-persister": "^5.20.5",
     "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-persist-client": "^5.20.5",
     "@tanstack/react-table": "^8.11.2",
     "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.44.1",
