feat: addition of zeego

--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -30,7 +30,23 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router", "expo-build-properties"],
+    "plugins": [
+      "expo-router",
+      "expo-build-properties",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            // these values were tested with Expo SDK 48
+            "compileSdkVersion": 33,
+            "targetSdkVersion": 33,
+            "minSdkVersion": 23,
+            "buildToolsVersion": "33.0.0",
+            "kotlinVersion": "1.6.20"
+          }
+        }
+      ]
+    ],
     "extra": {
       "router": {
         "origin": false
