--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -20,6 +20,7 @@
     "@my/db": "0.1.0",
     "@my/ui": "0.0.1",
     "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-menu/menu": "^0.9.1",
     "@react-navigation/native": "^6.1.6",
     "app": "0.0.0",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -41,11 +42,14 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-ios-context-menu": "^2.4.3",
+    "react-native-ios-utilities": "^4.3.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "zeego": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
