--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -3,7 +3,7 @@
     "name": "sharepack",
     "slug": "sharepack",
     "scheme": "sharepack",
-    "version": "0.8.5",
+    "version": "0.8.6",
     "orientation": "portrait",
     "icon": "./assets/travel-bag.png",
     "userInterfaceStyle": "automatic",
@@ -30,23 +30,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-build-properties",
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            // these values were tested with Expo SDK 48
-            "compileSdkVersion": 33,
-            "targetSdkVersion": 33,
-            "minSdkVersion": 23,
-            "buildToolsVersion": "33.0.0",
-            "kotlinVersion": "1.6.20"
-          }
-        }
-      ]
-    ],
+    "plugins": ["expo-router", "expo-build-properties"],
     "extra": {
       "router": {
         "origin": false
