--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,7 +19,7 @@
     "@expo/config-plugins": "~7.2.2",
     "@my/db": "0.1.0",
     "@my/ui": "0.0.1",
-    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-menu/menu": "^0.9.1",
     "@react-navigation/native": "^6.1.6",
     "app": "0.0.0",
@@ -29,7 +29,7 @@
     "expo-auth-session": "~5.0.2",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
-    "expo-dev-client": "~2.4.11",
+    "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
@@ -37,10 +37,10 @@
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.16",
+    "expo-updates": "~0.18.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ios-context-menu": "^2.4.3",
     "react-native-ios-utilities": "^4.3.2",
@@ -59,7 +59,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "metro-minify-terser": "^0.74.1",
     "react-native-dotenv": "^3.4.9",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "resolutions": {
     "metro": "0.76.0",
