--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vercel:install": "yarn install",
     "build": "turbo build",
     "native": "cd apps/expo && yarn start",
-    "release:android": "cd apps/expo && yarn release:android",
+    "release:android:dev": "cd apps/expo && yarn release:android:dev",
+    "release:android:prod": "cd apps/expo && yarn release:android:prod",
     "adb": "cd apps/expo && yarn adb",
     "watch": "yarn workspaces foreach -pi run watch",
     "web": "yarn build && cd apps/next && yarn dev",
